--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Container to Azure Web App
+name: Build and Deploy to Azure Web App
 
 on:
   push:
@@ -20,6 +20,3 @@ jobs:
       with:
         app-name: 'group5-rfp-analyser'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        # This 'images' line is required by the action, but the value is just a placeholder.
-        # The action will automatically find and use the Dockerfile in your repository.
-        images: 'placeholder.azurecr.io/image:latest'
